--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
   <script type="text/javascript" src="http://www.parsecdn.com/js/parse-1.4.2.min.js"></script>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
-  <link rel="stylesheet" href="css/css.css">
+  <link rel="stylesheet" href="css.css">
 
   <!--引入初始化 Parse 的 js 檔案-->
-  <script type="text/javascript" src="js/key.js"></script>
+  <script type="text/javascript" src="key.js"></script>
   <script  type="text/javascript">
   
     $(document).ready(function(){
